--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<ol style="font-family:Rockwell">
 				<h3>
 					<li value="1">
-						<a href="file:///D:/P%C3%A1ginas%20web/Web%20Jes%C3%BAs/1.0%20El%20principio%20y%20el%20fin%20de%20todo/elprincipioyelfindetodo.html">
+						<a href="https://user-webs.github.io/1.0/">
 							El principio y el fin de todo
 						</a>
 						<ol>
