--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 								</a>
 							</li>
 							<li value="2">
-								<a href="">
+								<a href="https://user-webs.github.io/1.2/">
 									Alfa y Omega
 								</a>
 							</li>
 							<li value="3">
-								<a href="">
+								<a href="https://user-webs.github.io/1.3/">
 									La creaci&oacute;n del mundo
 								</a>
 							</li>
